﻿<h3>Version 1.1.5</h3>
<p>This release brings some feature changes and stabilization fixes for 1.1.0.</p>
<ul>
    <li>EditEmployee: Control now fully localizable.</li>
    <li>EditEmployee: Added russian localization resources.</li>
    <li>EditEmployee: Display document URL in achivements edit form.<li>
    <li>Implemented #55: ViewEmployeeDetails: Added edit button.</li>
    <li>Implemented #56: EmployeeDirectory: Mark unpublished employees.</li>
    <li>Implemented #58: ViewEmployeeDetails: Paint tables with dnnGrid classes.</li>
    <li>Other small improvements and fixes.</li>
</ul>

<h3>Version 1.1.4</h3>
<p>This release brings some feature changes and stabilization fixes for 1.1.0.</p>
<ul>
    <li>Fixed #52: Pressing Enter in the search entry should activate search.</li>
    <li>Fixed #54: EmployeeDirectory: Could search with empty search phrase including subdivisions.</li>
    <li>Implemented #51: EmployeeDirectory: Search by position titles.</li>
    <li>Other small improvements and fixes.</li>
</ul>

<h3>Version 1.1.3</h3>
<p>This release brings some feature changes and stabilization fixes for 1.1.0.</p>
<ul>
    <li>New EmployeeDirectory module provides search for employees.</li>
    <li>ViewEmployeeDetails: fixes for non-popup mode.</li>
    <li>Other small improvements and fixes.</li>
</ul>

<h3>Version 1.1.2</h3>
<p>This release brings some feature changes and stabilization fixes for 1.1.0.</p>
<ul>
    <li>Ability to lookup for photo by employee name (also supports transliteration for cyrillic (russian) names).</li>
	<li>Implemented #39: Position entity: Added IsTeacher field and corresponding UI.</li>
	<li>Implemented #45: Employee entity: Added Disciplines field and corresponding UI.</li>
    <li>Implemented #47: Employee entity: Default employee photo images.</li>
    <li>Partially implemented #46: Launchpad: Search / filter functionality by employees.</li>
	<li>Other small improvements and fixes.</li>
</ul>

<h3>Version 1.1.1</h3>