@@ -133,6 +133,6 @@ Global
 		$0.XmlFormattingPolicy = $14
 		$14.inheritsSet = null
 		$14.scope = application/x-msbuild
-		version = 1.1.4
+		version = 1.1.5
 	EndGlobalSection
 EndGlobal
